# orchestrion-js

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  README.md  SECURITY.md  eslint.config.js  index.d.ts  index.ts  inline-binary.js  package.json  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  validate-pr.yml
lib/: transformer.js  transforms.js
src/: config.rs  error.rs  function_query.rs  instrumentation.rs  lib.rs  wasm.rs
tests/: instrumentor_test.rs  tests.mjs  tests.test.mjs
tests/arguments_mutation/: mod.js  mod.rs  test.js
tests/arrow_arguments_cjs/: mod.js  test.js
tests/arrow_expr_args_cjs/: mod.js  test.js
tests/arrow_this_binding_cjs/: mod.js  test.js
tests/arrow_this_property_args_cjs/: mod.js  test.js
tests/ast_query_cjs/: mod.js  test.js
tests/async_iterator_cjs/: mod.js  test.js
tests/callback_cjs/: mod.js  test.js
tests/callback_promise_sync_cjs/: mod.js  test.js
tests/class_expression_cjs/: mod.js  mod.rs  test.js
tests/class_method_cjs/: instrumentations.yml  mod.js  mod.rs  test.js
tests/common/: mod.rs  preamble.js
tests/const_class_export_alias_mjs/: mod.mjs  mod.rs  test.mjs
tests/constructor_cjs/: instrumentations.yml  mod.js  mod.rs  test.js
tests/constructor_mjs/: instrumentations.yml  mod.mjs  mod.rs  test.mjs
tests/custom_transform_cjs/: mod.js  test.js
tests/decl_cjs/: instrumentations.yml  mod.js  mod.rs  test.js
tests/decl_mjs/: instrumentations.yml  mod.mjs  mod.rs  test.mjs
tests/decl_mjs_mismatched_type/: mod.mjs  mod.rs  test.mjs
tests/export_alias_class_mjs/: mod.mjs  mod.rs
tests/export_alias_mjs/: mod.mjs  mod.rs  test.mjs
tests/expr_cjs/: mod.js  mod.rs  test.js
tests/expr_mjs/: instrumentations.yml  mod.mjs  mod.rs  test.mjs
tests/iife_nested_class/: mod.js  test.js
tests/index_cjs/: instrumentations.yml  mod.js  mod.rs  test.js
tests/injection_failure/: mod.mjs  mod.rs  test.mjs
tests/injection_failure_method_name/: mod.mjs  test.mjs
tests/instance_method_subclass_cjs/: mod.js  (+2 more)
(+60 files in other folders)
