[package]
name = "orchestrion-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[lib]
# crate-type = ["cdylib"]
# This was originally set as above, but commented to run tests in tests folder.


[profile.release]
lto = true

[dependencies]
nodejs-semver = "4.1.0"
swc = "16.1.0"
swc_core = { version = "16.2.3", features = ["ecma_plugin_transform","ecma_quote"] }
swc_ecma_parser = "10.0.0"
swc_ecma_visit = { version = "8.0.0", features = ["path"] }
yaml-rust2 = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.16"
