[package]
name = "orchestrion-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"
license = "Apache-2.0"

[lib]
# crate-type = ["cdylib"]
# This was originally set as above, but commented to run tests in tests folder.

[profile.release]
lto = true

[dependencies]
nodejs-semver = "4"
swc = "21"
swc_core = { version = "22", features = ["ecma_plugin_transform","ecma_quote"] }
swc_ecma_parser = "11"
swc_ecma_visit = { version = "8", features = ["path"] }

[dev-dependencies]
assert_cmd = "2"
