[package]
name = "orchestrion-js"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde = ["serde/derive"]
wasm = ['serde', "wasm-bindgen", "tsify", "getrandom"]

[dependencies]
nodejs-semver = { version = "4", features = ["serde"] }
swc = "21"
swc_core = { version = "22", features = ["ecma_plugin_transform","ecma_quote"] }
swc_ecma_parser = "11"
swc_ecma_visit = { version = "8", features = ["path"] }

# serde feature
serde = { version = "1", features = ["derive"], optional = true }

# wasm feature
wasm-bindgen = { version = "0.2", optional = true }
tsify = { version='0.5', features = ["js"], optional = true}
# we need this to enable the js feature
getrandom = { version = "*", features = ["js"], optional = true }

[dev-dependencies]
assert_cmd = "2"

[profile.release]
lto = true
opt-level = "s"